--- a/ZeyoMeasurement/Main.storyboard
+++ b/ZeyoMeasurement/Main.storyboard
@@ -404,82 +404,82 @@
         <scene sceneID="mGu-GE-zG6">
             <objects>
                 <tableViewController id="7YH-Rf-jnJ" customClass="ClosetVC" customModule="ZeyoMeasurement" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="fHi-6l-V65">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="fHi-6l-V65">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <view key="tableFooterView" contentMode="scaleToFill" id="VYU-YQ-d7i">
-                            <rect key="frame" x="0.0" y="202" width="414" height="44"/>
+                            <rect key="frame" x="0.0" y="203" width="414" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
-                        <sections>
-                            <tableViewSection headerTitle="My Clothes" id="eaE-0K-Nx8">
-                                <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="174" id="s1O-cF-b0I">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="174"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="s1O-cF-b0I" id="gmG-oR-PcE">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="173.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Vgz-T1-T60">
-                                                    <rect key="frame" x="20" y="11" width="374" height="152"/>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="eUp-4W-8s6">
-                                                        <size key="itemSize" width="115" height="148"/>
-                                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                                    </collectionViewFlowLayout>
-                                                    <cells>
-                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="clothCell" id="F3h-cE-8zM" customClass="ClothCell" customModule="ZeyoMeasurement" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="2" width="115" height="148"/>
-                                                            <autoresizingMask key="autoresizingMask"/>
-                                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                                <rect key="frame" x="0.0" y="0.0" width="115" height="148"/>
-                                                                <autoresizingMask key="autoresizingMask"/>
-                                                                <subviews>
-                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="aim" translatesAutoresizingMaskIntoConstraints="NO" id="uLA-QW-JKD">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="115" height="104"/>
-                                                                    </imageView>
-                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="반팔 티셔츠" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ofD-qL-ppt">
-                                                                        <rect key="frame" x="16" y="104" width="83" height="44"/>
-                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                        <nil key="textColor"/>
-                                                                        <nil key="highlightedColor"/>
-                                                                    </label>
-                                                                </subviews>
-                                                            </view>
-                                                            <constraints>
-                                                                <constraint firstItem="ofD-qL-ppt" firstAttribute="top" secondItem="uLA-QW-JKD" secondAttribute="bottom" id="0M1-rB-YJp"/>
-                                                                <constraint firstItem="uLA-QW-JKD" firstAttribute="leading" secondItem="F3h-cE-8zM" secondAttribute="leading" id="AkU-4I-vZR"/>
-                                                                <constraint firstItem="ofD-qL-ppt" firstAttribute="leading" secondItem="F3h-cE-8zM" secondAttribute="leadingMargin" id="PZr-O5-01V"/>
-                                                                <constraint firstItem="uLA-QW-JKD" firstAttribute="top" secondItem="F3h-cE-8zM" secondAttribute="top" id="ThF-d7-E9E"/>
-                                                                <constraint firstAttribute="bottomMargin" secondItem="ofD-qL-ppt" secondAttribute="bottom" id="bZS-Wq-TO7"/>
-                                                                <constraint firstAttribute="trailingMargin" secondItem="ofD-qL-ppt" secondAttribute="trailing" id="esB-Jo-qKT"/>
-                                                                <constraint firstAttribute="trailing" secondItem="uLA-QW-JKD" secondAttribute="trailing" id="lDx-6Y-dwU"/>
-                                                                <constraint firstAttribute="bottom" secondItem="uLA-QW-JKD" secondAttribute="bottom" constant="44" id="vaQ-iP-Hbf"/>
-                                                            </constraints>
-                                                            <connections>
-                                                                <outlet property="nameLabel" destination="ofD-qL-ppt" id="6vA-W5-1bM"/>
-                                                                <outlet property="thumbImageView" destination="uLA-QW-JKD" id="Bdb-wY-y5W"/>
-                                                            </connections>
-                                                        </collectionViewCell>
-                                                    </cells>
-                                                </collectionView>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="Vgz-T1-T60" secondAttribute="bottom" id="3Pa-4r-6Wx"/>
-                                                <constraint firstItem="Vgz-T1-T60" firstAttribute="top" secondItem="gmG-oR-PcE" secondAttribute="topMargin" id="7GN-JX-GBB"/>
-                                                <constraint firstItem="Vgz-T1-T60" firstAttribute="leading" secondItem="gmG-oR-PcE" secondAttribute="leadingMargin" id="YTB-9c-RpA"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="Vgz-T1-T60" secondAttribute="trailing" id="pDD-aU-rjb"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </cells>
-                            </tableViewSection>
-                        </sections>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="closetCell" rowHeight="175" id="s1O-cF-b0I" customClass="ClosetTableViewCell" customModule="ZeyoMeasurement" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="175"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="s1O-cF-b0I" id="gmG-oR-PcE">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="174.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Vgz-T1-T60">
+                                            <rect key="frame" x="20" y="11" width="374" height="153"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="eUp-4W-8s6">
+                                                <size key="itemSize" width="115" height="148"/>
+                                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                            </collectionViewFlowLayout>
+                                            <cells>
+                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="clothCell" id="F3h-cE-8zM" customClass="ClothCollectionViewCell" customModule="ZeyoMeasurement" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="2.5" width="115" height="148"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                                        <rect key="frame" x="0.0" y="0.0" width="115" height="148"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <subviews>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="t4" translatesAutoresizingMaskIntoConstraints="NO" id="uLA-QW-JKD">
+                                                                <rect key="frame" x="0.0" y="0.0" width="115" height="104"/>
+                                                            </imageView>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="반팔 티셔츠" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ofD-qL-ppt">
+                                                                <rect key="frame" x="16" y="104" width="83" height="44"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                    </view>
+                                                    <constraints>
+                                                        <constraint firstItem="ofD-qL-ppt" firstAttribute="top" secondItem="uLA-QW-JKD" secondAttribute="bottom" id="0M1-rB-YJp"/>
+                                                        <constraint firstItem="uLA-QW-JKD" firstAttribute="leading" secondItem="F3h-cE-8zM" secondAttribute="leading" id="AkU-4I-vZR"/>
+                                                        <constraint firstItem="ofD-qL-ppt" firstAttribute="leading" secondItem="F3h-cE-8zM" secondAttribute="leadingMargin" id="PZr-O5-01V"/>
+                                                        <constraint firstItem="uLA-QW-JKD" firstAttribute="top" secondItem="F3h-cE-8zM" secondAttribute="top" id="ThF-d7-E9E"/>
+                                                        <constraint firstAttribute="bottomMargin" secondItem="ofD-qL-ppt" secondAttribute="bottom" id="bZS-Wq-TO7"/>
+                                                        <constraint firstAttribute="trailingMargin" secondItem="ofD-qL-ppt" secondAttribute="trailing" id="esB-Jo-qKT"/>
+                                                        <constraint firstAttribute="trailing" secondItem="uLA-QW-JKD" secondAttribute="trailing" id="lDx-6Y-dwU"/>
+                                                        <constraint firstAttribute="bottom" secondItem="uLA-QW-JKD" secondAttribute="bottom" constant="44" id="vaQ-iP-Hbf"/>
+                                                    </constraints>
+                                                    <connections>
+                                                        <outlet property="nameLabel" destination="ofD-qL-ppt" id="6vA-W5-1bM"/>
+                                                        <outlet property="thumbImageView" destination="uLA-QW-JKD" id="Bdb-wY-y5W"/>
+                                                    </connections>
+                                                </collectionViewCell>
+                                            </cells>
+                                        </collectionView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Vgz-T1-T60" secondAttribute="bottom" id="3Pa-4r-6Wx"/>
+                                        <constraint firstItem="Vgz-T1-T60" firstAttribute="top" secondItem="gmG-oR-PcE" secondAttribute="topMargin" id="7GN-JX-GBB"/>
+                                        <constraint firstItem="Vgz-T1-T60" firstAttribute="leading" secondItem="gmG-oR-PcE" secondAttribute="leadingMargin" id="YTB-9c-RpA"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Vgz-T1-T60" secondAttribute="trailing" id="pDD-aU-rjb"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="collectionView" destination="Vgz-T1-T60" id="HmY-QN-5JY"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <sections/>
                         <connections>
                             <outlet property="dataSource" destination="7YH-Rf-jnJ" id="nFt-eL-8Cf"/>
                             <outlet property="delegate" destination="7YH-Rf-jnJ" id="m6B-34-vRm"/>
@@ -501,5 +501,6 @@
     <resources>
         <image name="aim" width="980" height="980"/>
         <image name="reset" width="44" height="44"/>
+        <image name="t4" width="1024" height="1024"/>
     </resources>
 </document>
